force-app/main/default/objects/PDLM__Manufacturer_Item__c/PDLM__Manufacturer_Item__c.object-meta.xml
<CustomObject>
    <description>Relates Item Revisions to Manufacturer Parts</description>
    <label>Manufacturer Item</label>
    <nameField>
        <displayFormat>MTM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturer Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>