force-app/main/default/objects/PDLM__Manufacturer_Item__c/fields/PDLM__Include_In_Cost_Rollup__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Include_In_Cost_Rollup__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only used on &quot;AML in BOM View&quot; field sets. Value is system used only.</description>
    <label>Include in Cost Roll-up</label>
    <type>Checkbox</type>
</CustomField>