force-app/main/default/objects/PDLM__Manufacturer_Item__c/fields/PDLM__Item_Revision__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item_Revision__c</fullName>
    <label>Item Revision</label>
    <referenceTo>PDLM__Item_Revision__c</referenceTo>
    <relationshipLabel>Manufacturer Items</relationshipLabel>
    <relationshipName>Manufacturer_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>