force-app/main/default/objects/PDLM__Manufacturer_Item__c/fields/PDLM__Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Parent_Category__c</fullName>
    <formula>CASESAFEID(PDLM__Item_Revision__r.PDLM__Master_Item__r.PDLM__Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Category</label>
    <type>Text</type>
</CustomField>