force-app/main/default/objects/PDLM__Manufacturer_Item__c/fields/PDLM__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>System maintained to ensure uniqueness</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>