force-app/main/default/objects/PDLM__Manufacturer_Item__c/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <formula>text(PDLM__Manufacturer_Part__r.PDLM__Manufacturer__r.Type)</formula>
    <label>Supplier Type</label>
    <type>Text</type>
</CustomField>