force-app/main/default/objects/PDLM__Manufacturer_Item__c/validationRules/PDLM__Manufacturer_Part_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Manufacturer_Part_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(PDLM__Manufacturer_Part__c)</errorConditionFormula>
    <errorMessage>Manufacturer Part must not be null</errorMessage>
</ValidationRule>