force-app/main/default/objects/PDLM__Manufacturer_Item__c/listViews/PDLM__All_Mfr_Items.listView-meta.xml
<ListView>
    <fullName>PDLM__All_Mfr_Items</fullName>
    <columns>PDLM__Item_Revision__c</columns>
    <columns>NAME</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Manufacturer__c</columns>
    <columns>PDLM__Allocation__c</columns>
    <columns>PDLM__Include_In_Cost_Rollup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mfr Items</label>
</ListView>